k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incident-platform
  labels:
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.28
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.28
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.28
